k8s/results-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: results-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: results
  ports:
    - port: 4000
      targetPort: 4000
